fix overflow mobile device

--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -2,7 +2,7 @@ html {
   font-size: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ::selection {
@@ -15,7 +15,7 @@ html {
 }
 
 .loader {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -24,5 +24,5 @@ body {
   line-height: 1.3;
   font-family: 'Poppins', sans-serif;
   cursor: none;
-  overflow: hidden;
+  overflow-x: hidden;
 }
