--- a/scss/index.css
+++ b/scss/index.css
@@ -2,7 +2,7 @@ html {
   font-size: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ::-moz-selection {
@@ -20,7 +20,7 @@ html {
 }
 
 .loader {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -29,7 +29,7 @@ body {
   line-height: 1.3;
   font-family: "Poppins", sans-serif;
   cursor: none;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .typed-cursor {
